--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "author": "Divyanshu Shekhar",
   "license": "ISC",
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
     "axios": "^1.5.0",
+    "i18next": "^24.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^15.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.20",
